# routes/api.php
@@ -8,7 +8,7 @@ use App\Http\Controllers\AuthController;
 
 
 
-Route::middleware('auth:api')->group(function(){
+Route::prefix('v1')->middleware('auth:api')->group(function(){
 
     Route::apiResource('products', ProductController::class);
     Route::post('logout', [AuthController::class, 'logout']);
@@ -16,9 +16,11 @@ Route::middleware('auth:api')->group(function(){
     Route::post('refresh', [AuthController::class, 'refresh']);
 
 });
-Route::post('register', [AuthController::class, 'register']);
-Route::post('login', [AuthController::class, 'login']);
+Route::prefix('v1')->group(function(){
+    Route::post('register', [AuthController::class, 'register']);
+    Route::post('login', [AuthController::class, 'login']);
 
+});
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return response()->json([
         'user' => $request->user()
